[package]
name = "organizer"
description = "A organization helper for my music library"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
better-panic = "0.3"
clap = { version = "4", features = ["derive", "cargo"] }
confique = "0.2"
dirs = "5"
dotenv = "0.15"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1", features = ["derive"] }
shellexpand = "3.1"
strum = { version = "0.24", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"
rstest = "0.16"
